--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,82 @@
       <maven.compiler.target>1.8</maven.compiler.target>
       <kotlin.version>1.7.10</kotlin.version>
    </properties>
-   
+   <profiles>
+	<profile>
+		<id>lwjgl-natives-linux-amd64</id>
+		<activation>
+			<os>
+				<family>unix</family>
+				<arch>amd64</arch>
+			</os>
+		</activation>
+		<properties>
+			<lwjgl.natives>natives-linux</lwjgl.natives>
+		</properties>
+	</profile>
+	<profile>
+		<id>lwjgl-natives-macos-x86_64</id>
+		<activation>
+			<os>
+				<family>mac</family>
+				<arch>x86_64</arch>
+			</os>
+		</activation>
+		<properties>
+			<lwjgl.natives>natives-macos</lwjgl.natives>
+		</properties>
+		<dependencies>
+			<dependency>
+				<groupId>org.lwjgl</groupId>
+				<artifactId>lwjgl-vulkan</artifactId>
+				<classifier>natives-macos</classifier>
+			</dependency>
+		</dependencies>
+	</profile>
+	<profile>
+		<id>lwjgl-natives-macos-aarch64</id>
+		<activation>
+			<os>
+				<family>mac</family>
+				<arch>aarch64</arch>
+			</os>
+		</activation>
+		<properties>
+			<lwjgl.natives>natives-macos-arm64</lwjgl.natives>
+		</properties>
+		<dependencies>
+			<dependency>
+				<groupId>org.lwjgl</groupId>
+				<artifactId>lwjgl-vulkan</artifactId>
+				<classifier>natives-macos-arm64</classifier>
+			</dependency>
+		</dependencies>
+	</profile>
+	<profile>
+		<id>lwjgl-natives-windows-amd64</id>
+		<activation>
+			<os>
+				<family>windows</family>
+				<arch>amd64</arch>
+			</os>
+		</activation>
+		<properties>
+			<lwjgl.natives>natives-windows</lwjgl.natives>
+		</properties>
+	</profile>
+	<profile>
+		<id>lwjgl-natives-windows-x86</id>
+		<activation>
+			<os>
+				<family>windows</family>
+				<arch>x86</arch>
+			</os>
+		</activation>
+		<properties>
+			<lwjgl.natives>natives-windows-x86</lwjgl.natives>
+		</properties>
+	</profile>
+</profiles>
    <build>
       <plugins>
          <plugin>
